# algorithmic-challenges

./: .gitignore  README.md
BFS/: BFS.sln  README.md
BFS/Properties/: AssemblyInfo.cs
Dijkstra Shortest Reach 2/: Dijkstra Shortest Reach 2.csproj  Dijkstra Shortest Reach 2.sln  Program.cs
Dijkstra Shortest Reach 2/Properties/: AssemblyInfo.cs
Even Tree/: Even Tree.csproj  README.md
Journey to the Moon/: Journey to the Moon.sln  Program.cs  README.md
Journey to the Moon/Properties/: AssemblyInfo.cs
Really Special Subtree/: Program.cs  Really Special Subtree.csproj
Roads and Libraries/: README.md  Roads and Libraries.sln
Roads and Libraries/Properties/: AssemblyInfo.cs
Snakes and Ladders/: Program.cs  README.md  Snakes and Ladders.csproj  Snakes and Ladders.sln
Snakes and Ladders/Properties/: AssemblyInfo.cs
Subset Component/Properties/: AssemblyInfo.cs
Superman celebrates diwali/: ConsoleReader.cs  Superman celebrates diwali.csproj  SupermanProblem.cs
hackerrank/BFS/: BFS.csproj  Program.cs
hackerrank/Dijkstra Shortest Reach 2/: README.md
hackerrank/Even Tree/: Even Tree.sln  Program.cs
hackerrank/Journey to the Moon/: Journey to the Moon.csproj  README.md
hackerrank/Really Special Subtree/: README.md  Really Special Subtree.sln
hackerrank/Roads and Libraries/: Program.cs  Roads and Libraries.csproj
hackerrank/Subset Component/: Program.cs  (+2 more)
leetcode/128-longest-consecutive-sequence/: Cargo.toml
leetcode/128-longest-consecutive-sequence/benches/: lib_benchmark.rs
leetcode/128-longest-consecutive-sequence/src/: lib.rs
(+21 files in other folders)
