[package]
name = "leetcode-128"
version = "0.1.0"
authors = ["Grzegorz Rozdzialik <voreny.gelio@gmail.com>"]
edition = "2018"

[[bench]]
name="lib_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.3"
rand = "0.8.0"
rand_pcg = "0.3.0"
